1.1_jaeger_cassandra-sts.yaml
---
# Source: jaeger/charts/cassandra/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jaeger-cassandra
  labels:
    app: cassandra
    chart: cassandra-0.15.2
    release: jaeger
    heritage: Tiller
spec:
  selector:
    matchLabels:
      app: cassandra
      release: jaeger
  serviceName: jaeger-cassandra
  replicas: 3
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: OnDelete
  template:
    metadata:
      labels:
        app: cassandra
        release: jaeger
    spec:
      hostNetwork: false
      containers:
      - name: jaeger-cassandra
        image: "cassandra:3.11.6"
        imagePullPolicy: "IfNotPresent"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "4"
        livenessProbe:
          exec:
            command: [ "/bin/sh", "-c", "nodetool status" ]
          initialDelaySeconds: 90
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command: [ "/bin/sh", "-c", "nodetool status | grep -E \"^UN\\s+${POD_IP}\"" ]
          initialDelaySeconds: 90
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        ports:
        - name: intra
          containerPort: 7000
        - name: tls
          containerPort: 7001
        - name: jmx
          containerPort: 7199
        - name: cql
          containerPort: 9042
        - name: thrift
          containerPort: 9160
        volumeMounts:
        - name: data
          mountPath: /var/lib/cassandra
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        app: cassandra
        release: jaeger
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "1024Gi"
