3_jaeger-collector.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-collector
  labels:
    app.kubernetes.io/name: jaeger
    helm.sh/chart: jaeger-0.17.4
    app.kubernetes.io/component: collector
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/instance: jaeger
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
      app.kubernetes.io/component: collector
      app.kubernetes.io/instance: jaeger
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config-env: 75a11da44c802486bc6f65640aa48a730f0f684c5c07a42ba3cd1735eb3fb070
      labels:
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/component: collector
        app.kubernetes.io/instance: jaeger
    spec:
      nodeSelector:
        {}
        
      serviceAccountName: jaeger-collector
      containers:
      - name: jaeger-collector
        image: jaegertracing/jaeger-collector:1.15.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 14250
          name: grpc
          protocol: TCP
        - containerPort: 14267
          name: tchannel
          protocol: TCP
        - containerPort: 14268
          name: http
          protocol: TCP
        - containerPort: 14269
          name: admin
          protocol: TCP
        - containerPort: 9411
          name: zipkin
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: admin
        livenessProbe:
          httpGet:
            path: /
            port: admin
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "2"                
        volumeMounts:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:	  
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  labels:
    app.kubernetes.io/name: jaeger
    helm.sh/chart: jaeger-0.17.4
    app.kubernetes.io/component: collector
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/instance: jaeger
spec:
  ports:
  - name: grpc
    port: 14250
    protocol: TCP
    targetPort: grpc
  - name: tchannel
    port: 14267
    protocol: TCP
    targetPort: tchannel
  - name: http
    port: 14268
    protocol: TCP
    targetPort: http
  - name: zipkin
    port: 9411
    protocol: TCP
    targetPort: zipkin
  selector:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: jaeger
  type: ClusterIP
