4_jaeger_query.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-query
  labels:
    app.kubernetes.io/name: jaeger
    helm.sh/chart: jaeger-0.17.4
    app.kubernetes.io/component: query
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/instance: jaeger
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
      app.kubernetes.io/component: query
      app.kubernetes.io/instance: jaeger
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/component: query
        app.kubernetes.io/instance: jaeger
    spec:
      nodeSelector:
        {}
        
      serviceAccountName: jaeger-query
      containers:
      - name: jaeger-query
        image: jaegertracing/jaeger-query:1.15.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: query
          containerPort: 16686
          protocol: TCP
        - name: admin
          containerPort: 16687
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
                
        volumeMounts:
        livenessProbe:
          httpGet:
            path: /
            port: admin
        readinessProbe:
          httpGet:
            path: /
            port: admin
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  labels:
    app.kubernetes.io/name: jaeger
    helm.sh/chart: jaeger-0.17.4
    app.kubernetes.io/component: query
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/instance: jaeger
spec:
  ports:
  - name: query
    port: 80
    protocol: TCP
    targetPort: query
  selector:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/component: query
    app.kubernetes.io/instance: jaeger
  type: ClusterIP
